Add SharpShark logo to header

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <!-- ===================== HEADER ===================== -->
     <header class="app-header">
         <div class="header-left">
+            <img src="SharpShark_Logo.png" alt="SharpShark" class="header-logo" />
             <span class="logo">🦈 SharkTrack</span>
         </div>
         <div class="header-right">
