--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
 
         <!-- DAILY SUMMARY -->
         <div class="section-card summary-card">
-            <div style="display:flex; justify-content:space-between; align-items:center;">
+            <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:12px;">
                 <h3 class="section-title" style="margin-bottom:0;">Danas</h3>
-                <button id="btnSendReport"
-                    style="background:none; border:none; font-size:0.8rem; color:var(--accent); cursor:pointer;">📧
+                <button id="btnSendReport" class="btn-nav"
+                    style="background:var(--green); color:#000; font-weight:700; border-radius:50px; padding:6px 14px; border:none; cursor:pointer; font-size:0.75rem;">📧
                     Pošalji izvještaj</button>
             </div>
-            <div class="summary-stats" style="margin-top:12px;">
+            <div class="summary-stats">
                 <div class="summary-stat">
                     <span class="summary-val" id="summaryCount">0</span>
                     <span class="summary-lbl">lokacija</span>
